# IDA-MCP

./: .gitignore  API.md  README.md  README_CN.md  check_fastmcp.py  command.py  ida_mcp.py  install.py  project.md  pytest.ini  requirements.txt  roadmap.md
ide/: .gitignore  README.md  launcher.py  project.md  pyproject.toml  requirements.txt  roadmap.md  rules.md
ide/app/: __init__.py  i18n.py  main.py  wiring.py
ide/app/assets/: README.md
ide/app/presenters/: __init__.py  main_window_presenter.py  settings_presenter.py
ide/app/services/: file_preview_service.py  gateway_manager.py  settings_service.py  supervisor_client.py  workspace_service.py
ide/app/state/: __init__.py  app_state.py  models.py  session_state.py
ide/app/ui/: __init__.py  icons.py  main_window.py  theme.py
ide/bootstrap/: __init__.py  env_bootstrap.py  ida_bootstrap.py
ide/packaging/: README.md  __init__.py  build_nuitka.py  build_windows.ps1
ide/shared/: __init__.py  database.py  dto.py  enums.py  events.py  ida_mcp_config.py  paths.py  platform.py  runtime.py
ide/supervisor/: __init__.py  api.py  config_store.py  gateway_controller.py  health.py  ida_launcher.py  install_runner.py  installer.py  main.py  manager.py  models.py  platform_detector.py  process_store.py
ide/tests/: __init__.py  conftest.py  test_build_nuitka.py  test_gateway_manager.py  test_ida_mcp_config.py  test_installer.py  test_main_window_i18n.py  test_main_window_presenter.py  test_paths.py  test_settings_config_path.py  test_settings_page_i18n.py  test_settings_presenter.py  test_settings_service.py
(+87 files in other folders)
