[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-mcp-ide"
version = "0.1.0"
description = "PySide6 desktop IDE for IDA-MCP installation, status management, and multi-agent audit workflows"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "IDA-MCP Contributors" }
]
dependencies = [
  "PySide6==6.11.0",
  "deepagents==0.5.2",
  "langgraph==1.1.6",
  "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
  "nuitka==2.8.4",
  "pytest==9.0.3",
  "pur==7.3.3",
  "zstandard==0.25.0",
]

[project.scripts]
ida-mcp-ide = "app.main:main"
ida-mcp-ide-supervisor = "supervisor.main:main"

[tool.setuptools]
py-modules = ["launcher"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "supervisor*", "shared*", "bootstrap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
